--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
+    "formik": "^2.4.5",
+    "html2pdf.js": "^0.10.1",
     "next": "^14.0.2",
     "next-auth": "^5.0.0-beta.15",
     "postcss": "8.4.31",
@@ -26,6 +28,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-debounce": "^10.0.0",
+    "yup": "^1.4.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
